brimo-pl-local.yaml
apiVersion: v1
kind: Pod
metadata:
  name: brimo-pl-dev-lokal
  labels:
    name: brimo-pl-dev-lokal
spec:
  containers:
  - name: brimo-paylater-whitelist-dev-lokal
    image: brimo-paylater-whitelist-dev-lokal:latest
    imagePullPolicy: Never
    ports:
      - containerPort: 9192
