deployment-brimo-pl-local.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: brimo-paylater-dev-lokal
spec:
  selector:
    matchLabels:
      app: brimo-paylater-dev-lokal
  template:
    metadata:
      labels:
        app: brimo-paylater-dev-lokal
    spec:
      containers:
      - name: brimo-paylater-dev-lokal
        image: ferryjwndhono/brimo-paylater-dev-lokal:1.0
        imagePullPolicy: Never
      - name: POSTGRES_DIALECTOR
        value: "host=host.docker.internal port=5432 user=postgres password=postgres dbname=brimo_paylater sslmode=disable"
      ports:
        - containerPort: 9192
