pod-brimo-pl-local.yaml
apiVersion: v1
kind: Pod
metadata:
  name: brimo-pl-dev-lokal
  labels:
    name: brimo-pl-dev-lokal
spec:
  containers:
  - name: brimo-paylater-dev-lokal
    image: ferryjwndhono/brimo-paylater-dev-lokal:1.0
    imagePullPolicy: Never
    ports:
      - containerPort: 9192
