service-brimo-pl-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: brimo-paylater-dev-lokal
spec:
  selector:
    app: brimo-paylater-dev-lokal
  type: LoadBalancer
  ports:
  - port: 9192
    targetPort: 9192
