ingress-brimo-pl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brimo-paylater-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: brimopaylater.dev # Replace with your desired hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: brimo-paylater-service
            port:
              number: 9192
